<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context="android.bootcamp.projectplanner.ResultActivity">

  <TextView
      android:id="@+id/number_of_iterations"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/number_of_iterations"/>

  <EditText
      android:hint="@string/buffer"
      android:id="@+id/buffer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:gravity="center_horizontal"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/adjust_for_buffer"
      android:onClick="adjust"/>
</LinearLayout>
