<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="1">

    <EditText
        android:id="@+id/number_of_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/total_points"
        android:inputType="number"/>

    <EditText
        android:id="@+id/velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/velocity"
        android:inputType="number"/>

    <TextView
        android:id="@+id/number_of_iterations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/number_of_iterations"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:onClick="calculate"
        android:text="@string/calculate"/>

    <ImageButton
        android:id="@+id/captureButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="captureImage"
        android:src="@drawable/camera_icon"/>

    <ImageView
        android:id="@+id/capturedImage"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        />

</LinearLayout>

